// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scanSource snapshot per fixture > anthropics-skills-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Spreadsheet creation, editing, and analysis.",
          "license": "Proprietary. LICENSE.txt has complete terms",
          "name": "xlsx",
        },
      },
      "description": "Spreadsheet creation, editing, and analysis.",
      "kind": "skill",
      "name": "xlsx",
      "path": "skills/xlsx",
      "plugin": "document-skills",
      "source": "anthropics-skills",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "PDF manipulation toolkit.",
          "license": "Proprietary. LICENSE.txt has complete terms",
          "name": "pdf",
        },
      },
      "description": "PDF manipulation toolkit.",
      "kind": "skill",
      "name": "pdf",
      "path": "skills/pdf",
      "plugin": "document-skills",
      "source": "anthropics-skills",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": ".claude-plugin/marketplace.json",
        "members": [
          {
            "kind": "skill",
            "name": "xlsx",
          },
          {
            "kind": "skill",
            "name": "pdf",
          },
        ],
      },
      "description": "Document processing suite",
      "kind": "plugin",
      "name": "document-skills",
      "path": ".",
      "source": "anthropics-skills",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Create visual art in .png and .pdf documents.",
          "name": "canvas-design",
        },
      },
      "description": "Create visual art in .png and .pdf documents.",
      "kind": "skill",
      "name": "canvas-design",
      "path": "skills/canvas-design",
      "plugin": "example-skills",
      "source": "anthropics-skills",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": ".claude-plugin/marketplace.json",
        "members": [
          {
            "kind": "skill",
            "name": "canvas-design",
          },
        ],
      },
      "description": "Example skills",
      "kind": "plugin",
      "name": "example-skills",
      "path": ".",
      "source": "anthropics-skills",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Not part of any marketplace plugin.",
          "name": "internal-only",
        },
      },
      "description": "Not part of any marketplace plugin.",
      "kind": "skill",
      "name": "internal-only",
      "path": "skills/internal-only",
      "source": "anthropics-skills",
    },
  ],
  "warnings": [
    "skipped skills/skeleton/SKILL.md: skill template",
    "plugins "document-skills", "example-skills" at . do not declare 1 skill (internal-only); indexed standalone",
  ],
}
`;

exports[`scanSource snapshot per fixture > apm-like 1`] = `
{
  "detected": "apm",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Fix lint errors.",
          "name": "lint-fix",
        },
      },
      "description": "Fix lint errors.",
      "kind": "skill",
      "name": "lint-fix",
      "path": ".apm/skills/lint-fix",
      "plugin": "my-apm-pkg",
      "source": "apm",
      "version": "1.0.0",
    },
    {
      "def": {
        "agent": {
          "body": "Review carefully.
",
          "description": "Reviews pull requests",
          "name": "reviewer",
          "sourceFormat": "apm-agent-md",
          "tools": [
            "read",
            "search",
          ],
        },
        "kind": "agent",
      },
      "description": "Reviews pull requests",
      "kind": "agent",
      "name": "reviewer",
      "path": ".apm/agents/reviewer.agent.md",
      "plugin": "my-apm-pkg",
      "source": "apm",
      "version": "1.0.0",
    },
    {
      "def": {
        "instruction": {
          "activation": "paths",
          "alwaysApply": false,
          "body": "Prefer const.
",
          "description": "TS style",
          "globs": [
            "**/*.ts",
          ],
          "name": "typescript",
          "sourceFormat": "instructions-md",
        },
        "kind": "instruction",
      },
      "description": "TS style",
      "kind": "instruction",
      "name": "typescript",
      "path": ".apm/instructions/typescript.instructions.md",
      "plugin": "my-apm-pkg",
      "source": "apm",
      "version": "1.0.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Cut a release",
          "fromCommand": {
            "body": "Cut a release now.
",
            "sourceFormat": "prompt-md",
          },
          "name": "release",
        },
      },
      "description": "Cut a release",
      "kind": "skill",
      "name": "release",
      "notes": [
        "from command release.prompt.md",
      ],
      "path": ".apm/prompts/release.prompt.md",
      "plugin": "my-apm-pkg",
      "source": "apm",
      "version": "1.0.0",
    },
    {
      "def": {
        "hooks": {
          "closure": {
            "paths": [
              ".apm/hooks",
            ],
          },
          "dialect": "claude",
          "name": "format-on-save",
          "pluginRootRel": ".",
          "promptHooks": [],
          "raw": {
            "hooks": {
              "PostToolUse": [
                {
                  "hooks": [
                    {
                      "command": "npx prettier --write "$CLAUDE_FILE_PATHS"",
                      "type": "command",
                    },
                  ],
                  "matcher": "Write|Edit",
                },
              ],
            },
          },
          "references": [],
        },
        "kind": "hook",
      },
      "kind": "hook",
      "name": "format-on-save",
      "path": ".apm/hooks/format-on-save.json",
      "plugin": "my-apm-pkg",
      "source": "apm",
      "version": "1.0.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "apm.yml",
        "members": [
          {
            "kind": "skill",
            "name": "lint-fix",
          },
          {
            "kind": "agent",
            "name": "reviewer",
          },
          {
            "kind": "instruction",
            "name": "typescript",
          },
          {
            "kind": "skill",
            "name": "release",
          },
          {
            "kind": "hook",
            "name": "format-on-save",
          },
        ],
      },
      "description": "A sample APM package",
      "kind": "plugin",
      "name": "my-apm-pkg",
      "path": ".",
      "source": "apm",
      "version": "1.0.0",
    },
  ],
  "warnings": [
    "apm.yml: 2 dependencies are not installed; declare what you need: palm install microsoft/apm-sample-package, palm install github/awesome-copilot/skills/review-and-refactor#v1.2.0",
  ],
}
`;

exports[`scanSource snapshot per fixture > awesome-copilot-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Suggest relevant agents.",
          "name": "suggest-awesome-github-copilot-agents",
        },
      },
      "description": "Suggest relevant agents.",
      "kind": "skill",
      "name": "suggest-awesome-github-copilot-agents",
      "path": "skills/suggest-awesome-github-copilot-agents",
      "plugin": "awesome-copilot",
      "source": "awesome-copilot",
      "version": "1.1.0",
    },
    {
      "def": {
        "agent": {
          "body": "Your sole task is to find and pull relevant prompts.
",
          "description": "Meta agentic project creation assistant",
          "displayName": "Meta Agentic Project Scaffold",
          "model": "GPT-4.1",
          "name": "meta-agentic-project-scaffold",
          "sourceFormat": "copilot-agent-md",
          "tools": [
            "changes",
            "codebase",
            "fetch",
          ],
        },
        "kind": "agent",
      },
      "description": "Meta agentic project creation assistant",
      "kind": "agent",
      "name": "meta-agentic-project-scaffold",
      "path": "agents/meta-agentic-project-scaffold.agent.md",
      "plugin": "awesome-copilot",
      "source": "awesome-copilot",
      "version": "1.1.0",
    },
    {
      "def": {
        "closure": {
          "paths": [],
        },
        "kind": "mcp",
        "mcp": {
          "args": [
            "run",
            "-i",
            "--rm",
            "ghcr.io/microsoft/mcp-dotnet-samples/awesome-copilot:latest",
          ],
          "command": "docker",
          "name": "awesome-copilot",
          "origin": {
            "ref": "awesome-copilot",
            "type": "source",
          },
          "transport": "stdio",
        },
        "references": [],
      },
      "kind": "mcp",
      "name": "awesome-copilot",
      "path": "plugins/awesome-copilot/mcp.json",
      "plugin": "awesome-copilot",
      "source": "awesome-copilot",
      "version": "1.1.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "plugins/awesome-copilot/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "suggest-awesome-github-copilot-agents",
          },
          {
            "kind": "agent",
            "name": "meta-agentic-project-scaffold",
          },
          {
            "kind": "mcp",
            "name": "awesome-copilot",
          },
        ],
      },
      "description": "Meta prompts that help you discover Copilot resources.",
      "kind": "plugin",
      "name": "awesome-copilot",
      "path": "plugins/awesome-copilot",
      "source": "awesome-copilot",
      "version": "1.1.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Guides Qdrant scaling decisions.",
          "name": "qdrant-scaling",
        },
      },
      "description": "Guides Qdrant scaling decisions.",
      "kind": "skill",
      "name": "qdrant-scaling",
      "path": "skills/qdrant-scaling",
      "source": "awesome-copilot",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Diagnoses horizontal scaling: 'vertical or horizontal?', 'how many nodes?'",
          "dirName": "horizontal-scaling",
          "name": "qdrant-horizontal-scaling",
          "parent": "qdrant-scaling",
        },
      },
      "description": "Diagnoses horizontal scaling: 'vertical or horizontal?', 'how many nodes?'",
      "kind": "skill",
      "name": "qdrant-horizontal-scaling",
      "path": "skills/qdrant-scaling/scaling-data-volume/horizontal-scaling",
      "source": "awesome-copilot",
    },
    {
      "def": {
        "agent": {
          "body": "You are an expert C#/.NET developer.
",
          "description": "An agent designed to assist with .NET projects.",
          "displayName": "C# Expert",
          "extra": {
            "mcp-servers": {
              "nuget": {
                "args": [
                  "NuGet.Mcp.Server",
                ],
                "command": "dnx",
                "type": "local",
              },
            },
          },
          "name": "c-sharp-expert",
          "sourceFormat": "copilot-agent-md",
        },
        "kind": "agent",
      },
      "description": "An agent designed to assist with .NET projects.",
      "kind": "agent",
      "name": "c-sharp-expert",
      "path": "agents/CSharpExpert.agent.md",
      "source": "awesome-copilot",
    },
    {
      "def": {
        "instruction": {
          "activation": "always",
          "alwaysApply": true,
          "body": "# Accessibility

Use semantic HTML.
",
          "description": "Web accessibility standards",
          "name": "a11y",
          "sourceFormat": "instructions-md",
        },
        "kind": "instruction",
      },
      "description": "Web accessibility standards",
      "kind": "instruction",
      "name": "a11y",
      "path": "instructions/a11y.instructions.md",
      "source": "awesome-copilot",
    },
    {
      "def": {
        "instruction": {
          "activation": "paths",
          "alwaysApply": false,
          "body": "Use type hints.
",
          "description": "Python conventions",
          "globs": [
            "**/*.py",
            "**/*.pyi",
          ],
          "name": "python",
          "sourceFormat": "instructions-md",
        },
        "kind": "instruction",
      },
      "description": "Python conventions",
      "kind": "instruction",
      "name": "python",
      "path": "instructions/python.instructions.md",
      "source": "awesome-copilot",
    },
    {
      "def": {
        "hooks": {
          "closure": {
            "paths": [
              "hooks/license-checker",
            ],
          },
          "dialect": "copilot",
          "name": "license-checker",
          "pluginRootRel": "hooks/license-checker",
          "promptHooks": [],
          "raw": {
            "hooks": {
              "sessionEnd": [
                {
                  "bash": ".github/hooks/license-checker/check.sh",
                  "cwd": ".",
                  "env": {
                    "LICENSE_MODE": "warn",
                  },
                  "timeoutSec": 60,
                  "type": "command",
                },
              ],
            },
            "version": 1,
          },
          "references": [],
        },
        "kind": "hook",
      },
      "kind": "hook",
      "name": "license-checker",
      "path": "hooks/license-checker/hooks.json",
      "source": "awesome-copilot",
    },
  ],
  "warnings": [
    "remote plugin "agent-council" (github:Avyayalaya/agent-council#v0.1.3) not fetched: declare it: palm install Avyayalaya/agent-council#v0.1.3 <names>",
    "remote plugin "anarlog" (github:fastrepl/anarlog/agent-plugins/anarlog@259b68866a7d) not fetched: declare it: palm install fastrepl/anarlog/agent-plugins/anarlog#259b68866a7d6c331cd428aaa33a33300a700c5d <names>",
    "skills/qdrant-scaling/scaling-data-volume/horizontal-scaling/SKILL.md: frontmatter name "qdrant-horizontal-scaling" differs from directory "horizontal-scaling"; keeping "qdrant-horizontal-scaling"",
  ],
}
`;

exports[`scanSource snapshot per fixture > caveman-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Ultra-compressed communication mode.",
          "name": "caveman",
        },
      },
      "description": "Ultra-compressed communication mode.",
      "kind": "skill",
      "name": "caveman",
      "path": "skills/caveman",
      "plugin": "caveman",
      "source": "caveman",
      "version": "2.7.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Terse commit messages.",
          "name": "caveman-commit",
        },
      },
      "description": "Terse commit messages.",
      "kind": "skill",
      "name": "caveman-commit",
      "path": "skills/caveman-commit",
      "plugin": "caveman",
      "source": "caveman",
      "version": "2.7.0",
    },
    {
      "def": {
        "agent": {
          "body": "Build.
",
          "description": "Builds things tersely.",
          "name": "cavecrew-builder",
          "sourceFormat": "claude-md",
          "tools": [
            "Read",
            "Edit",
            "Bash",
          ],
        },
        "kind": "agent",
      },
      "description": "Builds things tersely.",
      "kind": "agent",
      "name": "cavecrew-builder",
      "path": "agents/cavecrew-builder.md",
      "plugin": "caveman",
      "source": "caveman",
      "version": "2.7.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Drop the caveman rule into the repo",
          "fromCommand": {
            "argumentHint": "[--dry-run|--force]",
            "body": "Write the rule files.
",
            "sourceFormat": "claude-md",
          },
          "name": "caveman-init",
        },
      },
      "description": "Drop the caveman rule into the repo",
      "kind": "skill",
      "name": "caveman-init",
      "notes": [
        "from command caveman-init.md",
      ],
      "path": "commands/caveman-init.md",
      "plugin": "caveman",
      "source": "caveman",
      "version": "2.7.0",
    },
    {
      "def": {
        "hooks": {
          "closure": {
            "paths": [
              "src/hooks/activate.js",
            ],
          },
          "dialect": "claude",
          "name": "caveman",
          "pluginRootRel": ".",
          "promptHooks": [],
          "raw": {
            "hooks": {
              "SessionStart": [
                {
                  "hooks": [
                    {
                      "command": "node "\${CLAUDE_PLUGIN_ROOT}/src/hooks/activate.js"",
                      "timeout": 30,
                      "type": "command",
                    },
                  ],
                },
              ],
            },
          },
          "references": [
            {
              "form": "plugin-root",
              "raw": ""\${CLAUDE_PLUGIN_ROOT}/src/hooks/activate.js"",
              "rel": "src/hooks/activate.js",
              "site": "command",
            },
          ],
        },
        "kind": "hook",
      },
      "kind": "hook",
      "name": "caveman",
      "path": ".claude-plugin/plugin.json",
      "plugin": "caveman",
      "source": "caveman",
      "version": "2.7.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": ".claude-plugin/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "caveman",
          },
          {
            "kind": "skill",
            "name": "caveman-commit",
          },
          {
            "kind": "agent",
            "name": "cavecrew-builder",
          },
          {
            "kind": "skill",
            "name": "caveman-init",
          },
          {
            "kind": "hook",
            "name": "caveman",
          },
        ],
      },
      "description": "Ultra-compressed communication mode.",
      "kind": "plugin",
      "name": "caveman",
      "path": ".",
      "source": "caveman",
      "version": "2.7.0",
    },
  ],
  "warnings": [
    "duplicate skill "caveman-init" at commands/caveman-init.toml ignored (already indexed from commands/caveman-init.md)",
    "command commands/caveman.toml dropped: skill "caveman" at skills/caveman has the same name",
    "duplicate skill "caveman" at plugins/caveman/skills/caveman ignored (already indexed from skills/caveman)",
  ],
}
`;

exports[`scanSource snapshot per fixture > claude-plugins-official-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "allowedTools": [
            "Read",
            "Grep",
            "WebFetch",
          ],
          "description": "Helps with Agent SDK questions.",
          "metadata": {
            "author": "anthropic",
            "version": "1.10",
          },
          "name": "sdk-helper",
          "version": "1.10",
        },
      },
      "description": "Helps with Agent SDK questions.",
      "kind": "skill",
      "name": "sdk-helper",
      "path": "plugins/agent-sdk-dev/skills/sdk-helper",
      "plugin": "agent-sdk-dev",
      "source": "claude-plugins-official",
      "version": "1.10",
    },
    {
      "def": {
        "agent": {
          "body": "You are a Python Agent SDK application verifier.
",
          "color": "green",
          "description": "Use this agent to verify a Python Agent SDK app. Examples: <example>Context: user created an app</example>",
          "mcpServers": [
            "context7",
          ],
          "model": "sonnet",
          "name": "agent-sdk-verifier-py",
          "skills": [
            "sdk-helper",
          ],
          "sourceFormat": "claude-md",
          "tools": [
            "Read",
            "Grep",
            "Glob",
            "Bash(python -m pytest:*)",
          ],
        },
        "kind": "agent",
      },
      "description": "Use this agent to verify a Python Agent SDK app. Examples: <example>Context: user created an app</example>",
      "kind": "agent",
      "name": "agent-sdk-verifier-py",
      "path": "plugins/agent-sdk-dev/agents/agent-sdk-verifier-py.md",
      "plugin": "agent-sdk-dev",
      "source": "claude-plugins-official",
      "version": "1.0.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Create and setup a new Claude Agent SDK application",
          "fromCommand": {
            "argumentHint": "[project-name]",
            "body": "You are tasked with helping the user create a new Claude Agent SDK application.
",
            "sourceFormat": "claude-md",
          },
          "name": "new-sdk-app",
        },
      },
      "description": "Create and setup a new Claude Agent SDK application",
      "kind": "skill",
      "name": "new-sdk-app",
      "notes": [
        "from command new-sdk-app.md",
      ],
      "path": "plugins/agent-sdk-dev/commands/new-sdk-app.md",
      "plugin": "agent-sdk-dev",
      "source": "claude-plugins-official",
      "version": "1.0.0",
    },
    {
      "def": {
        "hooks": {
          "closure": {
            "paths": [
              "plugins/agent-sdk-dev/hooks",
            ],
          },
          "dialect": "claude",
          "name": "agent-sdk-dev",
          "pluginRootRel": "plugins/agent-sdk-dev",
          "promptHooks": [],
          "raw": {
            "description": "Guard edits",
            "hooks": {
              "PreToolUse": [
                {
                  "hooks": [
                    {
                      "command": "python3 \${CLAUDE_PLUGIN_ROOT}/hooks/guard.py",
                      "timeout": 10,
                      "type": "command",
                    },
                  ],
                  "matcher": "Write|Edit",
                },
              ],
            },
          },
          "references": [
            {
              "form": "plugin-root",
              "raw": "\${CLAUDE_PLUGIN_ROOT}/hooks/guard.py",
              "rel": "plugins/agent-sdk-dev/hooks/guard.py",
              "site": "command",
            },
          ],
        },
        "kind": "hook",
      },
      "kind": "hook",
      "name": "agent-sdk-dev",
      "path": "plugins/agent-sdk-dev/hooks/hooks.json",
      "plugin": "agent-sdk-dev",
      "source": "claude-plugins-official",
      "version": "1.0.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "plugins/agent-sdk-dev/.claude-plugin/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "sdk-helper",
          },
          {
            "kind": "agent",
            "name": "agent-sdk-verifier-py",
          },
          {
            "kind": "skill",
            "name": "new-sdk-app",
          },
          {
            "kind": "hook",
            "name": "agent-sdk-dev",
          },
        ],
      },
      "description": "Agent SDK dev kit",
      "kind": "plugin",
      "name": "agent-sdk-dev",
      "path": "plugins/agent-sdk-dev",
      "source": "claude-plugins-official",
      "version": "1.0.0",
    },
    {
      "def": {
        "closure": {
          "paths": [],
        },
        "kind": "mcp",
        "mcp": {
          "headers": {
            "Authorization": "Bearer \${GITHUB_PERSONAL_ACCESS_TOKEN}",
          },
          "name": "github",
          "origin": {
            "ref": "claude-plugins-official",
            "type": "source",
          },
          "secrets": [
            {
              "header": "Authorization",
              "in": "header",
              "name": "GITHUB_PERSONAL_ACCESS_TOKEN",
              "required": true,
            },
          ],
          "transport": "http",
          "url": "https://api.githubcopilot.com/mcp/",
        },
        "references": [],
      },
      "kind": "mcp",
      "name": "github",
      "path": "external_plugins/github/.mcp.json",
      "plugin": "github",
      "source": "claude-plugins-official",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "external_plugins/github/.claude-plugin/plugin.json",
        "members": [
          {
            "kind": "mcp",
            "name": "github",
          },
        ],
      },
      "description": "Official GitHub MCP server",
      "kind": "plugin",
      "name": "github",
      "path": "external_plugins/github",
      "source": "claude-plugins-official",
    },
    {
      "def": {
        "closure": {
          "paths": [],
        },
        "kind": "mcp",
        "mcp": {
          "headers": {
            "Authorization": "\${CONTEXT7_API_KEY:-}",
          },
          "name": "context7",
          "origin": {
            "ref": "claude-plugins-official",
            "type": "source",
          },
          "secrets": [
            {
              "header": "Authorization",
              "in": "header",
              "name": "CONTEXT7_API_KEY",
              "required": true,
            },
          ],
          "transport": "http",
          "url": "https://mcp.context7.com/mcp",
        },
        "references": [],
      },
      "kind": "mcp",
      "name": "context7",
      "path": "external_plugins/context7/.mcp.json",
      "plugin": "context7",
      "source": "claude-plugins-official",
    },
    {
      "def": {
        "closure": {
          "paths": [],
        },
        "kind": "mcp",
        "mcp": {
          "args": [
            "-y",
            "@modelcontextprotocol/server-filesystem",
            ".",
          ],
          "command": "npx",
          "env": {
            "FS_TOKEN": "\${FS_TOKEN}",
          },
          "name": "fs",
          "origin": {
            "ref": "claude-plugins-official",
            "type": "source",
          },
          "secrets": [
            {
              "in": "env",
              "name": "FS_TOKEN",
              "required": true,
            },
          ],
          "transport": "stdio",
        },
        "references": [],
      },
      "kind": "mcp",
      "name": "fs",
      "path": "external_plugins/context7/.mcp.json",
      "plugin": "context7",
      "source": "claude-plugins-official",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "external_plugins/context7/.claude-plugin/plugin.json",
        "members": [
          {
            "kind": "mcp",
            "name": "context7",
          },
          {
            "kind": "mcp",
            "name": "fs",
          },
        ],
      },
      "description": "Context7 docs lookup",
      "kind": "plugin",
      "name": "context7",
      "path": "external_plugins/context7",
      "source": "claude-plugins-official",
    },
  ],
  "warnings": [
    "plugin clangd-lsp: lspServers not supported by palm (ignored)",
    "plugin "clangd-lsp" at plugins/clangd-lsp has no installable components; skipped",
    "remote plugin "42crunch" (https://github.com/42Crunch-AI/claude-plugins.git (plugins/api-security-testing)@faf5305385de) not fetched: declare it: palm install 42Crunch-AI/claude-plugins/plugins/api-security-testing#faf5305385de8afed9468904e8639be737aff39e <names>",
    "remote plugin "agentforce-adlc" (https://github.com/SalesforceAIResearch/agentforce-adlc.git@09bf1539d41f) not fetched: declare it: palm install SalesforceAIResearch/agentforce-adlc#09bf1539d41f9ff355ba3eb5d05d4a75813423bb <names>",
    "plugin "npm-plugin": unsupported source npm:@acme/plugin; skipped",
  ],
}
`;

exports[`scanSource snapshot per fixture > codex-agent-like 1`] = `
{
  "detected": "convention",
  "entities": [
    {
      "def": {
        "closure": {
          "paths": [],
        },
        "kind": "mcp",
        "mcp": {
          "args": [
            "-y",
            "server-fs",
          ],
          "command": "npx",
          "name": "local-fs",
          "origin": {
            "ref": "codex-agent",
            "type": "source",
          },
          "transport": "stdio",
        },
        "references": [],
      },
      "kind": "mcp",
      "name": "local-fs",
      "path": ".mcp.json",
      "source": "codex-agent",
    },
    {
      "def": {
        "agent": {
          "body": "Review code like an owner.
Prioritize correctness, security, behavior regressions.
",
          "description": "PR reviewer focused on correctness and security.",
          "extra": {
            "mcp_servers": {
              "docs": {
                "url": "https://example.com/mcp",
              },
            },
            "model_reasoning_effort": "high",
            "sandbox_mode": "read-only",
          },
          "mcpServers": [
            "docs",
          ],
          "model": "gpt-5.4",
          "name": "reviewer",
          "sourceFormat": "codex-toml",
        },
        "kind": "agent",
      },
      "description": "PR reviewer focused on correctness and security.",
      "kind": "agent",
      "name": "reviewer",
      "path": "agents/reviewer.toml",
      "source": "codex-agent",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Review the diff",
          "fromCommand": {
            "body": "Review {{args}} carefully.",
            "sourceFormat": "gemini-toml",
          },
          "name": "review",
        },
      },
      "description": "Review the diff",
      "kind": "skill",
      "name": "review",
      "notes": [
        "from command review.toml",
      ],
      "path": "commands/review.toml",
      "source": "codex-agent",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Ship it",
          "fromCommand": {
            "argumentHint": "[--dry-run]",
            "body": "Ship the change.
",
            "sourceFormat": "claude-md",
          },
          "name": "ship",
        },
      },
      "description": "Ship it",
      "kind": "skill",
      "name": "ship",
      "notes": [
        "from command ship.md",
      ],
      "path": "commands/ship.md",
      "source": "codex-agent",
    },
    {
      "def": {
        "hooks": {
          "closure": {
            "paths": [
              "hooks",
            ],
          },
          "dialect": "gemini",
          "name": "codex-agent",
          "pluginRootRel": ".",
          "promptHooks": [],
          "raw": {
            "hooks": {
              "BeforeTool": [
                {
                  "hooks": [
                    {
                      "command": "./check.sh",
                      "type": "command",
                    },
                  ],
                  "matcher": "write_file",
                },
              ],
            },
          },
          "references": [
            {
              "form": "relative",
              "raw": "./check.sh",
              "site": "command",
              "unresolved": "no such file in the source",
            },
          ],
        },
        "kind": "hook",
      },
      "issues": [
        {
          "code": "unresolvable-reference",
          "file": "hooks/hooks.json",
          "message": "hooks/hooks.json: cannot relocate "./check.sh" in command "./check.sh": no such file in the source",
          "severity": "critical",
        },
      ],
      "kind": "hook",
      "name": "codex-agent",
      "path": "hooks/hooks.json",
      "source": "codex-agent",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Explain code",
          "fromCommand": {
            "body": "Explain the selection.
",
            "sourceFormat": "prompt-md",
          },
          "name": "explain",
        },
      },
      "description": "Explain code",
      "kind": "skill",
      "name": "explain",
      "notes": [
        "from command explain.prompt.md",
      ],
      "path": "prompts/explain.prompt.md",
      "source": "codex-agent",
    },
    {
      "def": {
        "instruction": {
          "activation": "paths",
          "alwaysApply": false,
          "body": "Use 2 spaces.
",
          "description": "Style",
          "globs": [
            "src/**/*.ts",
          ],
          "name": "style",
          "sourceFormat": "mdc",
        },
        "kind": "instruction",
      },
      "description": "Style",
      "kind": "instruction",
      "name": "style",
      "path": "rules/style.mdc",
      "source": "codex-agent",
    },
  ],
  "warnings": [
    "skipped agents/partial.md: agent file without name/description frontmatter",
    "unresolvable-reference: hook "codex-agent" (critical): hooks/hooks.json: cannot relocate "./check.sh" in command "./check.sh": no such file in the source",
  ],
}
`;

exports[`scanSource snapshot per fixture > cursor-monorepo-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Route work through the pstack workflow.",
          "name": "poteto-mode",
        },
      },
      "description": "Route work through the pstack workflow.",
      "kind": "skill",
      "name": "poteto-mode",
      "path": "pstack/skills/poteto-mode",
      "plugin": "pstack",
      "source": "cursor-monorepo",
      "version": "0.14.2",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Use only when the user explicitly asks for TDD.",
          "extra": {
            "disable-model-invocation": true,
          },
          "name": "tdd",
        },
      },
      "description": "Use only when the user explicitly asks for TDD.",
      "kind": "skill",
      "name": "tdd",
      "path": "pstack/skills/tdd",
      "plugin": "pstack",
      "source": "cursor-monorepo",
      "version": "0.14.2",
    },
    {
      "def": {
        "agent": {
          "body": "# Comment Sicko

I hate comments.
",
          "description": "A deranged comment-hater that savors deletion.",
          "displayName": "Comment Sicko",
          "name": "comment-sicko",
          "sourceFormat": "cursor-md",
        },
        "kind": "agent",
      },
      "description": "A deranged comment-hater that savors deletion.",
      "kind": "agent",
      "name": "comment-sicko",
      "path": "pstack/agents/comment-sicko.md",
      "plugin": "pstack",
      "source": "cursor-monorepo",
      "version": "0.14.2",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "pstack/.cursor-plugin/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "poteto-mode",
          },
          {
            "kind": "skill",
            "name": "tdd",
          },
          {
            "kind": "agent",
            "name": "comment-sicko",
          },
        ],
      },
      "description": "if you want to go fast, go deep first.",
      "kind": "plugin",
      "name": "pstack",
      "path": "pstack",
      "source": "cursor-monorepo",
      "version": "0.14.2",
    },
    {
      "def": {
        "closure": {
          "paths": [],
        },
        "kind": "mcp",
        "mcp": {
          "name": "ahrefs",
          "origin": {
            "ref": "cursor-monorepo",
            "type": "source",
          },
          "transport": "http",
          "url": "https://api.ahrefs.com/mcp/mcp",
        },
        "references": [],
      },
      "kind": "mcp",
      "name": "ahrefs",
      "path": "third_party/ahrefs/mcp.json",
      "plugin": "ahrefs",
      "source": "cursor-monorepo",
      "version": "1.0.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "third_party/ahrefs/.cursor-plugin/plugin.json",
        "members": [
          {
            "kind": "mcp",
            "name": "ahrefs",
          },
        ],
      },
      "description": "Research keywords.",
      "kind": "plugin",
      "name": "ahrefs",
      "path": "third_party/ahrefs",
      "source": "cursor-monorepo",
      "version": "1.0.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Watch CI and fix failures.",
          "name": "ci-watch",
        },
      },
      "description": "Watch CI and fix failures.",
      "kind": "skill",
      "name": "ci-watch",
      "path": "team-kit/skills/ci-watch",
      "plugin": "cursor-team-kit",
      "source": "cursor-monorepo",
      "version": "1.2.0",
    },
    {
      "def": {
        "agent": {
          "body": "Watch CI.
",
          "description": "Watches CI runs.",
          "extra": {
            "readonly": true,
          },
          "model": "fast",
          "name": "ci-watcher",
          "sourceFormat": "cursor-md",
        },
        "kind": "agent",
      },
      "description": "Watches CI runs.",
      "kind": "agent",
      "name": "ci-watcher",
      "path": "team-kit/agents/ci-watcher.md",
      "plugin": "cursor-team-kit",
      "source": "cursor-monorepo",
      "version": "1.2.0",
    },
    {
      "def": {
        "instruction": {
          "activation": "always",
          "alwaysApply": true,
          "body": "# No inline imports

Always place imports at the top.
",
          "description": "Keep imports at top of file",
          "name": "no-inline-imports",
          "sourceFormat": "mdc",
        },
        "kind": "instruction",
      },
      "description": "Keep imports at top of file",
      "kind": "instruction",
      "name": "no-inline-imports",
      "path": "team-kit/rules/no-inline-imports.mdc",
      "plugin": "cursor-team-kit",
      "source": "cursor-monorepo",
      "version": "1.2.0",
    },
    {
      "def": {
        "instruction": {
          "activation": "paths",
          "alwaysApply": false,
          "body": "Use exhaustive switches.
",
          "description": "TypeScript conventions",
          "globs": [
            "**/*.ts",
            "**/*.tsx",
          ],
          "name": "typescript",
          "sourceFormat": "mdc",
        },
        "kind": "instruction",
      },
      "description": "TypeScript conventions",
      "kind": "instruction",
      "name": "typescript",
      "path": "team-kit/rules/typescript.mdc",
      "plugin": "cursor-team-kit",
      "source": "cursor-monorepo",
      "version": "1.2.0",
    },
    {
      "def": {
        "hooks": {
          "closure": {
            "paths": [
              "team-kit/hooks",
            ],
          },
          "dialect": "cursor",
          "name": "cursor-team-kit",
          "pluginRootRel": "team-kit",
          "promptHooks": [],
          "raw": {
            "hooks": {
              "afterFileEdit": [
                {
                  "command": "bash "\${CURSOR_PLUGIN_ROOT}/hooks/mark.sh"",
                },
              ],
              "subagentStop": [
                {
                  "command": "bash ./hooks/record.sh",
                  "matcher": "^advisor$",
                },
              ],
            },
            "version": 1,
          },
          "references": [
            {
              "form": "plugin-root",
              "raw": ""\${CURSOR_PLUGIN_ROOT}/hooks/mark.sh"",
              "rel": "team-kit/hooks/mark.sh",
              "site": "command",
            },
            {
              "form": "relative",
              "raw": "./hooks/record.sh",
              "rel": "team-kit/hooks/record.sh",
              "site": "command",
            },
          ],
        },
        "kind": "hook",
      },
      "kind": "hook",
      "name": "cursor-team-kit",
      "path": "team-kit/hooks/hooks.json",
      "plugin": "cursor-team-kit",
      "source": "cursor-monorepo",
      "version": "1.2.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "team-kit/.cursor-plugin/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "ci-watch",
          },
          {
            "kind": "skill",
            "name": "tdd",
          },
          {
            "kind": "agent",
            "name": "ci-watcher",
          },
          {
            "kind": "instruction",
            "name": "no-inline-imports",
          },
          {
            "kind": "instruction",
            "name": "typescript",
          },
          {
            "kind": "hook",
            "name": "cursor-team-kit",
          },
        ],
      },
      "description": "Internal team workflows.",
      "kind": "plugin",
      "name": "cursor-team-kit",
      "path": "team-kit",
      "source": "cursor-monorepo",
      "version": "1.2.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Configure Benny.",
          "name": "setup-benny",
        },
      },
      "description": "Configure Benny.",
      "kind": "skill",
      "name": "setup-benny",
      "path": "pstack/automations/benny/skills/setup-benny",
      "source": "cursor-monorepo",
    },
  ],
  "warnings": [
    "pstack/skills/poteto-mode/SKILL.md: frontmatter name "Poteto Mode" is not a valid slug; using "poteto-mode"",
    "duplicate skill "tdd" at team-kit/skills/tdd ignored (already indexed from pstack/skills/tdd)",
    "remote plugin "far-away" (github:acme/far-away#v1.0.0) not fetched: declare it: palm install acme/far-away#v1.0.0 <names>",
    "plugin "missing-dir": source directory does-not-exist not found; skipped",
    "plugin "pstack" at pstack does not declare 1 skill (setup-benny); indexed standalone",
  ],
}
`;

exports[`scanSource snapshot per fixture > descriptor-like 1`] = `
{
  "detected": "convention",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Alpha skill.",
          "name": "alpha",
        },
      },
      "description": "Alpha skill.",
      "kind": "skill",
      "name": "alpha",
      "path": "catalog/skills/alpha",
      "source": "descriptor",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Beta skill whose frontmatter name differs.",
          "dirName": "beta",
          "name": "beta-renamed",
        },
      },
      "description": "Beta skill whose frontmatter name differs.",
      "kind": "skill",
      "name": "beta-renamed",
      "path": "catalog/skills/beta",
      "source": "descriptor",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Gamma skill (excluded by the descriptor).",
          "name": "gamma",
        },
      },
      "description": "Gamma skill (excluded by the descriptor).",
      "kind": "skill",
      "name": "gamma",
      "path": "catalog/skills/gamma",
      "source": "descriptor",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Not matched by the descriptor globs.",
          "name": "ignored-by-descriptor",
        },
      },
      "description": "Not matched by the descriptor globs.",
      "kind": "skill",
      "name": "ignored-by-descriptor",
      "path": "other/skills/ignored-by-descriptor",
      "source": "descriptor",
    },
    {
      "def": {
        "agent": {
          "body": "x
",
          "description": "would be found by convention only",
          "name": "conventional",
          "sourceFormat": "claude-md",
        },
        "kind": "agent",
      },
      "description": "would be found by convention only",
      "kind": "agent",
      "name": "conventional",
      "path": "agents/conventional.md",
      "source": "descriptor",
    },
  ],
  "warnings": [
    "catalog/skills/beta/SKILL.md: frontmatter name "beta-renamed" differs from directory "beta"; keeping "beta-renamed"",
  ],
}
`;

exports[`scanSource snapshot per fixture > descriptor-like with a layout descriptor 1`] = `
{
  "detected": "descriptor",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Alpha skill.",
          "name": "alpha",
        },
      },
      "description": "Alpha skill.",
      "kind": "skill",
      "name": "alpha",
      "path": "catalog/skills/alpha",
      "source": "descriptor",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Beta skill whose frontmatter name differs.",
          "dirName": "beta",
          "name": "beta-renamed",
        },
      },
      "description": "Beta skill whose frontmatter name differs.",
      "kind": "skill",
      "name": "beta-renamed",
      "path": "catalog/skills/beta",
      "source": "descriptor",
    },
    {
      "def": {
        "agent": {
          "body": "Review.
",
          "description": "Reviews code",
          "name": "reviewer",
          "sourceFormat": "claude-md",
        },
        "kind": "agent",
      },
      "description": "Reviews code",
      "kind": "agent",
      "name": "reviewer",
      "path": "catalog/people/reviewer.md",
      "source": "descriptor",
    },
    {
      "def": {
        "agent": {
          "body": "Help.
",
          "description": "helper agent living in a tests dir",
          "name": "helper",
          "sourceFormat": "claude-md",
        },
        "kind": "agent",
      },
      "description": "helper agent living in a tests dir",
      "kind": "agent",
      "name": "helper",
      "path": "catalog/tests/helper.md",
      "source": "descriptor",
    },
  ],
  "warnings": [
    "catalog/skills/beta/SKILL.md: frontmatter name "beta-renamed" differs from directory "beta"; keeping "beta-renamed"",
  ],
}
`;

exports[`scanSource snapshot per fixture > hidden-unicode-like 1`] = `
{
  "detected": "convention",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Formats invoices.",
          "name": "bidi-override",
        },
      },
      "description": "Formats invoices.",
      "issues": [
        {
          "code": "hidden-unicode",
          "file": "skills/bidi-override/SKILL.md",
          "message": "skills/bidi-override/SKILL.md: 1 hidden character, first U+202E RIGHT-TO-LEFT OVERRIDE at line 8",
          "severity": "critical",
        },
      ],
      "kind": "skill",
      "name": "bidi-override",
      "path": "skills/bidi-override",
      "source": "hidden-unicode",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "A family of emoji is fine.",
          "name": "clean",
        },
      },
      "description": "A family of emoji is fine.",
      "kind": "skill",
      "name": "clean",
      "path": "skills/clean",
      "source": "hidden-unicode",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Greets people.",
          "name": "zero-width",
        },
      },
      "description": "Greets people.",
      "issues": [
        {
          "code": "hidden-unicode",
          "file": "skills/zero-width/SKILL.md",
          "message": "skills/zero-width/SKILL.md: 1 hidden character, first U+200B ZERO WIDTH SPACE at line 8",
          "severity": "warning",
        },
      ],
      "kind": "skill",
      "name": "zero-width",
      "path": "skills/zero-width",
      "source": "hidden-unicode",
    },
    {
      "def": {
        "agent": {
          "body": "Review the diff.󠁉󠁧󠁮󠁯󠁲󠁥
",
          "description": "Reviews code.",
          "name": "tagged",
          "sourceFormat": "claude-md",
        },
        "kind": "agent",
      },
      "description": "Reviews code.",
      "issues": [
        {
          "code": "hidden-unicode",
          "file": "agents/tagged.md",
          "message": "agents/tagged.md: 6 hidden characters, first U+E0049 TAG LATIN CAPITAL LETTER I at line 6",
          "severity": "critical",
        },
      ],
      "kind": "agent",
      "name": "tagged",
      "path": "agents/tagged.md",
      "source": "hidden-unicode",
    },
  ],
  "warnings": [
    "hidden-unicode: skill "bidi-override" (critical): skills/bidi-override/SKILL.md: 1 hidden character, first U+202E RIGHT-TO-LEFT OVERRIDE at line 8",
    "hidden-unicode: skill "zero-width" (warning): skills/zero-width/SKILL.md: 1 hidden character, first U+200B ZERO WIDTH SPACE at line 8",
    "hidden-unicode: agent "tagged" (critical): agents/tagged.md: 6 hidden characters, first U+E0049 TAG LATIN CAPITAL LETTER I at line 6",
  ],
}
`;

exports[`scanSource snapshot per fixture > marketplaces 1`] = `
{
  "detected": "empty",
  "entities": [],
  "warnings": [],
}
`;

exports[`scanSource snapshot per fixture > mattpocock-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Test-driven development with red-green-refactor.",
          "name": "tdd",
        },
      },
      "description": "Test-driven development with red-green-refactor.",
      "kind": "skill",
      "name": "tdd",
      "path": "skills/engineering/tdd",
      "plugin": "mattpocock-skills",
      "source": "mattpocock",
      "version": "1.2.3",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Interview the user relentlessly about a plan.",
          "name": "grill-me",
        },
      },
      "description": "Interview the user relentlessly about a plan.",
      "kind": "skill",
      "name": "grill-me",
      "path": "skills/engineering/grill-me",
      "plugin": "mattpocock-skills",
      "source": "mattpocock",
      "version": "1.2.3",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Write a handoff note for the next session.",
          "name": "handoff",
        },
      },
      "description": "Write a handoff note for the next session.",
      "kind": "skill",
      "name": "handoff",
      "path": "skills/productivity/handoff",
      "plugin": "mattpocock-skills",
      "source": "mattpocock",
      "version": "1.2.3",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": ".claude-plugin/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "tdd",
          },
          {
            "kind": "skill",
            "name": "grill-me",
          },
          {
            "kind": "skill",
            "name": "handoff",
          },
        ],
      },
      "description": "Matt Pocock's agent skills for real engineering.",
      "kind": "plugin",
      "name": "mattpocock-skills",
      "path": ".",
      "source": "mattpocock",
      "version": "1.2.3",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "An old skill kept for reference.",
          "name": "old-thing",
        },
      },
      "description": "An old skill kept for reference.",
      "kind": "skill",
      "name": "old-thing",
      "path": "skills/deprecated/old-thing",
      "source": "mattpocock",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Block dangerous git commands.",
          "name": "git-guardrails",
        },
      },
      "description": "Block dangerous git commands.",
      "kind": "skill",
      "name": "git-guardrails",
      "path": "skills/misc/git-guardrails",
      "source": "mattpocock",
    },
  ],
  "warnings": [
    "plugin "mattpocock-skills" at . does not declare 2 skills (old-thing, git-guardrails); indexed standalone",
  ],
}
`;

exports[`scanSource snapshot per fixture > nested-plugins-like 1`] = `
{
  "detected": "plugin-manifest",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Alpha skill.",
          "name": "alpha-skill",
        },
      },
      "description": "Alpha skill.",
      "kind": "skill",
      "name": "alpha-skill",
      "path": "plugins/alpha/skills/alpha-skill",
      "plugin": "alpha",
      "source": "nested-plugins",
      "version": "0.1.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Go",
          "fromCommand": {
            "body": "Go now.
",
            "sourceFormat": "claude-md",
          },
          "name": "go",
        },
      },
      "description": "Go",
      "kind": "skill",
      "name": "go",
      "notes": [
        "from command go.md",
      ],
      "path": "plugins/alpha/commands/go.md",
      "plugin": "alpha",
      "source": "nested-plugins",
      "version": "0.1.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "plugins/alpha/.claude-plugin/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "alpha-skill",
          },
          {
            "kind": "skill",
            "name": "go",
          },
        ],
      },
      "kind": "plugin",
      "name": "alpha",
      "path": "plugins/alpha",
      "source": "nested-plugins",
      "version": "0.1.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Say hello",
          "fromCommand": {
            "body": "Say hello.",
            "sourceFormat": "gemini-toml",
          },
          "name": "hello",
        },
      },
      "description": "Say hello",
      "kind": "skill",
      "name": "hello",
      "notes": [
        "from command hello.toml",
      ],
      "path": "plugins/beta/commands/hello.toml",
      "plugin": "beta",
      "source": "nested-plugins",
      "version": "0.2.0",
    },
    {
      "def": {
        "closure": {
          "paths": [],
        },
        "kind": "mcp",
        "mcp": {
          "name": "beta-server",
          "origin": {
            "ref": "nested-plugins",
            "type": "source",
          },
          "transport": "http",
          "url": "https://beta.example.com/mcp",
        },
        "references": [],
      },
      "kind": "mcp",
      "name": "beta-server",
      "path": "plugins/beta/gemini-extension.json",
      "plugin": "beta",
      "source": "nested-plugins",
      "version": "0.2.0",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "plugins/beta/gemini-extension.json",
        "members": [
          {
            "kind": "skill",
            "name": "hello",
          },
          {
            "kind": "mcp",
            "name": "beta-server",
          },
        ],
      },
      "kind": "plugin",
      "name": "beta",
      "path": "plugins/beta",
      "source": "nested-plugins",
      "version": "0.2.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "A standalone skill.",
          "name": "loose",
        },
      },
      "description": "A standalone skill.",
      "kind": "skill",
      "name": "loose",
      "path": "skills/loose",
      "source": "nested-plugins",
    },
  ],
  "warnings": [],
}
`;

exports[`scanSource snapshot per fixture > openai-like 1`] = `
{
  "detected": "convention",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Fix failing GitHub Actions checks.",
          "name": "gh-fix-ci",
        },
      },
      "description": "Fix failing GitHub Actions checks.",
      "kind": "skill",
      "name": "gh-fix-ci",
      "path": "skills/.curated/gh-fix-ci",
      "source": "openai",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Turn Notion specs into tickets.",
          "name": "notion-spec",
        },
      },
      "description": "Turn Notion specs into tickets.",
      "kind": "skill",
      "name": "notion-spec",
      "path": "skills/.curated/notion-spec",
      "source": "openai",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Experimental.",
          "name": "beta-thing",
        },
      },
      "description": "Experimental.",
      "kind": "skill",
      "name": "beta-thing",
      "path": "skills/.experimental/beta-thing",
      "source": "openai",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Create new skills.",
          "name": "skill-creator",
        },
      },
      "description": "Create new skills.",
      "kind": "skill",
      "name": "skill-creator",
      "path": "skills/.system/skill-creator",
      "source": "openai",
    },
  ],
  "warnings": [],
}
`;

exports[`scanSource snapshot per fixture > openai-like with a layout descriptor 1`] = `
{
  "detected": "descriptor",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Fix failing GitHub Actions checks.",
          "name": "gh-fix-ci",
        },
      },
      "description": "Fix failing GitHub Actions checks.",
      "kind": "skill",
      "name": "gh-fix-ci",
      "path": "skills/.curated/gh-fix-ci",
      "source": "openai",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Turn Notion specs into tickets.",
          "name": "notion-spec",
        },
      },
      "description": "Turn Notion specs into tickets.",
      "kind": "skill",
      "name": "notion-spec",
      "path": "skills/.curated/notion-spec",
      "source": "openai",
    },
  ],
  "warnings": [],
}
`;

exports[`scanSource snapshot per fixture > root-skill-like 1`] = `
{
  "detected": "convention",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "allowedTools": [
            "Bash",
            "Read",
            "WebSearch",
          ],
          "description": "Research what happened in the last 30 days.",
          "dirName": "root-skill-like",
          "extra": {
            "argument-hint": "[topic]",
            "user-invocable": true,
          },
          "metadata": {
            "openclaw": "{"emoji":"📅"}",
          },
          "name": "last30days",
          "version": "2.1.0",
        },
      },
      "description": "Research what happened in the last 30 days.",
      "kind": "skill",
      "name": "last30days",
      "path": ".",
      "source": "root-skill",
      "version": "2.1.0",
    },
  ],
  "warnings": [],
}
`;

exports[`scanSource snapshot per fixture > superpowers-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Use before any creative work: explore intent, requirements and design.",
          "name": "brainstorming",
        },
      },
      "description": "Use before any creative work: explore intent, requirements and design.",
      "kind": "skill",
      "name": "brainstorming",
      "path": "skills/brainstorming",
      "plugin": "superpowers",
      "source": "superpowers",
      "version": "6.4.2",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Use when implementing any feature or bugfix, before writing implementation code.",
          "name": "test-driven-development",
        },
      },
      "description": "Use when implementing any feature or bugfix, before writing implementation code.",
      "kind": "skill",
      "name": "test-driven-development",
      "path": "skills/test-driven-development",
      "plugin": "superpowers",
      "source": "superpowers",
      "version": "6.4.2",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Use when creating or editing skills.",
          "name": "writing-skills",
        },
      },
      "description": "Use when creating or editing skills.",
      "kind": "skill",
      "name": "writing-skills",
      "path": "skills/writing-skills",
      "plugin": "superpowers",
      "source": "superpowers",
      "version": "6.4.2",
    },
    {
      "def": {
        "hooks": {
          "closure": {
            "paths": [
              "hooks",
            ],
          },
          "dialect": "claude",
          "name": "superpowers",
          "pluginRootRel": ".",
          "promptHooks": [],
          "raw": {
            "hooks": {
              "SessionStart": [
                {
                  "hooks": [
                    {
                      "async": false,
                      "command": ""\${CLAUDE_PLUGIN_ROOT}/hooks/run-hook.cmd" session-start",
                      "type": "command",
                    },
                  ],
                  "matcher": "startup|clear|compact",
                },
              ],
            },
          },
          "references": [
            {
              "form": "plugin-root",
              "raw": ""\${CLAUDE_PLUGIN_ROOT}/hooks/run-hook.cmd"",
              "rel": "hooks/run-hook.cmd",
              "site": "command",
            },
          ],
        },
        "kind": "hook",
      },
      "kind": "hook",
      "name": "superpowers",
      "path": "hooks/hooks.json",
      "plugin": "superpowers",
      "source": "superpowers",
      "version": "6.4.2",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": ".claude-plugin/plugin.json",
        "members": [
          {
            "kind": "skill",
            "name": "brainstorming",
          },
          {
            "kind": "skill",
            "name": "test-driven-development",
          },
          {
            "kind": "skill",
            "name": "writing-skills",
          },
          {
            "kind": "hook",
            "name": "superpowers",
          },
        ],
      },
      "description": "Core skills library for Claude Code",
      "kind": "plugin",
      "name": "superpowers",
      "path": ".",
      "source": "superpowers",
      "version": "6.4.2",
    },
  ],
  "warnings": [],
}
`;

exports[`scanSource snapshot per fixture > vercel-like 1`] = `
{
  "detected": "convention",
  "entities": [
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Deploy the current project.",
          "dirName": "Deploy To Vercel",
          "name": "deploy-to-vercel",
        },
      },
      "description": "Deploy the current project.",
      "kind": "skill",
      "name": "deploy-to-vercel",
      "path": "skills/Deploy To Vercel",
      "source": "vercel",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "React performance guidelines from Vercel.",
          "dirName": "react-best-practices",
          "license": "MIT",
          "metadata": {
            "author": "vercel",
            "version": "1.0.0",
          },
          "name": "vercel-react-best-practices",
          "version": "1.0.0",
        },
      },
      "description": "React performance guidelines from Vercel.",
      "kind": "skill",
      "name": "vercel-react-best-practices",
      "path": "skills/react-best-practices",
      "source": "vercel",
      "version": "1.0.0",
    },
    {
      "def": {
        "kind": "skill",
        "skill": {
          "description": "Review UI code for web interface guidelines.",
          "name": "web-design-guidelines",
        },
      },
      "description": "Review UI code for web interface guidelines.",
      "kind": "skill",
      "name": "web-design-guidelines",
      "path": "skills/web-design-guidelines",
      "source": "vercel",
    },
  ],
  "warnings": [
    "skills/Deploy To Vercel/SKILL.md: frontmatter name "Deploy To Vercel" is not a valid slug; using "deploy-to-vercel"",
    "skills/react-best-practices/SKILL.md: frontmatter name "vercel-react-best-practices" differs from directory "react-best-practices"; keeping "vercel-react-best-practices"",
  ],
}
`;

exports[`scanSource snapshot per fixture > voltagent-like 1`] = `
{
  "detected": "marketplace",
  "entities": [
    {
      "def": {
        "agent": {
          "body": "You are a senior API designer.
",
          "description": "API architecture expert",
          "model": "sonnet",
          "name": "api-designer",
          "sourceFormat": "claude-md",
          "tools": [
            "Read",
            "Write",
            "Edit",
            "Bash",
            "Glob",
            "Grep",
          ],
        },
        "kind": "agent",
      },
      "description": "API architecture expert",
      "kind": "agent",
      "name": "api-designer",
      "path": "categories/01-core-development/api-designer.md",
      "plugin": "voltagent-core-dev",
      "source": "voltagent",
      "version": "1.0.4",
    },
    {
      "def": {
        "agent": {
          "body": "You are a backend developer.
",
          "description": "Senior backend engineer",
          "name": "backend-developer",
          "sourceFormat": "claude-md",
          "tools": [
            "Read",
            "Write",
          ],
        },
        "kind": "agent",
      },
      "description": "Senior backend engineer",
      "kind": "agent",
      "name": "backend-developer",
      "path": "categories/01-core-development/backend-developer.md",
      "plugin": "voltagent-core-dev",
      "source": "voltagent",
      "version": "1.0.4",
    },
    {
      "def": {
        "kind": "plugin",
        "manifestPath": "categories/01-core-development/.claude-plugin/plugin.json",
        "members": [
          {
            "kind": "agent",
            "name": "api-designer",
          },
          {
            "kind": "agent",
            "name": "backend-developer",
          },
        ],
      },
      "kind": "plugin",
      "name": "voltagent-core-dev",
      "path": "categories/01-core-development",
      "source": "voltagent",
      "version": "1.0.4",
    },
  ],
  "warnings": [
    "plugin voltagent-core-dev: declared agent path "./missing.md" not found",
  ],
}
`;
